Fix z-index order
on mobile, some welements were hidden by the header

--- a/src/components/auth-modal/auth-modal.css
+++ b/src/components/auth-modal/auth-modal.css
@@ -10,7 +10,7 @@
     transition: opacity .3s ease-in-out;
     background-color: rgba(0, 0, 0, .3);
     pointer-events: none;
-    z-index: 2;
+    z-index: 11;
 }
 
 .auth-modal--active {
