--- a/src/components/mobile-filters/mobile-filters.css
+++ b/src/components/mobile-filters/mobile-filters.css
@@ -11,7 +11,7 @@
     transition: opacity .3s ease-in-out;
     pointer-events: none;
     overflow: hidden;
-    z-index: 2;
+    z-index: 10;
 }
 
 .mobile-filters--active {
